--- a/Solary_Gestionnaire/App.xaml
+++ b/Solary_Gestionnaire/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="Solary_Gestionnaire.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Solary_Gestionnaire"
-             >
+             xmlns:local="clr-namespace:Solary_Gestionnaire">
+    
     <Application.Resources>
         <!-- Couleurs principales -->
         <Color x:Key="PrimaryDarkColor">#1A1A2E</Color>
